Refactor `FullScanNode` to utilize simplified predicate evaluation logic with `FullScanPredicate`. Introduce static utility methods in `PredicateEvaluator` for cleaner and reusable comparisons, enhancing filtering efficiency and maintainability.